syntax = "proto3";

package rank;
option go_package = "./;rankPb";

message RankSnapshot {
  map<string,uint32> snapshotData = 1; // id - > score
}
